# openenv-email-ops

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
backend/: analytics.py  leaderboard.py  main.py  runner.py
baseline/: run_baseline.py
baseline/llm_clients/: gemini_client.py  groq_client.py  heuristic_fallback.py  local_client.py  openai_client.py  router.py
data/: leaderboard.json
env/: environment.py  grader.py  models.py  tasks.py
frontend/: app.py
scripts/: pre_submission_check.py
server/: app.py
